sleep fehler gefunden, am anfang muss länger geschlafen werden für den Einstieg, ankunft + entry bei start